Mon Aug 14 08:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/Messaging.h:
        * tao/Messaging/messaging_export.h:
          Moved the undef of TRANSPART to the export file to fix
          compile errors on solaris. This way we don't need to handcraft
          generated files for the messaging lib

Mon Aug 14 07:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode_Case_Enum_T.{h,cpp,inl}:
        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:
          Fixed handling of union with enums. This fixes bugzilla bug
          2446, thanks to Tommy Persson <tpe at ida dot liu dot se> for
          reporting this bug. Also it fixes bugzilla bug 2539 which
          has been reported by sdjiangwei@sina.com. The real fix has
          been made by Dale Boan <boan at sedsystems dot ca>, many thanks
          to him.

Sun Aug 13 23:30:02 UTC 2006  Yan Dai  <dai_y@ociweb.com>

          These changes excluded the POAManagerFactory and EndpointPolicy
          from minimum corba, minimum poa and CORBA/e builds.

        * tao/PortableServer/POA.pidl:

          Excluded the_POAManagerFactory attribute in POA.

        * tao/PortableServer/POAManagerFactory.pidl:

          Excluded POAManagerFactory interface.

        * tao/PortableServer/POAManager.cpp:
        * tao/PortableServer/POAManager.inl:
        * tao/PortableServer/POAManager.h:
        * tao/PortableServer/Object_Adapter.cpp:
        * tao/PortableServer/Object_Adapter.h:
        * tao/PortableServer/Acceptor_Filter_Factory.cpp:
        * tao/PortableServer/Acceptor_Filter_Factory.h:
        * tao/PortableServer/POAManagerFactory.cpp:
        * tao/PortableServer/POAManagerFactory.h:
        * tao/PortableServer/Root_POA.cpp:
        * tao/PortableServer/Root_POA.h:

          Excluded the use of POAManagerFactory in the code.

        * tao/EndpointPolicy.mpc:
        * tests/POA/EndpointPolicy/EndpointPolicy.mpc: